src/test/ui/E0665.stderr
error[E0665]: `Default` cannot be derived for enums, only structs
  --> $DIR/E0665.rs:1:10
   |
LL | #[derive(Default)] //~ ERROR E0665
   |          ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0665`.
