src/test/ui/E0665.rs
#[derive(Default)] //~ ERROR E0665
enum Food {
    Sweet,
    Salty,
}

fn main() {
}
